# crawler-detect-c

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  setup.sh
include/: crawler_detect.h
include/fixtures/: fixtures.h
scripts/: Dockerfile  compile.sh
src/: crawler_detect.c
src/fixtures/: crawlers.c  exclusions.c
tests/unit/: CMakeLists.txt  main.c  test_crawler_detect.c  utest.h
